@@ -1,3 +1,8 @@
+2007-07-16  Wakaba  <wakaba@suika.fam.cx>
+
+	* URIReference.pm: Don't throw exception if read-only
+	attribute is tried to set.
+
 2007-06-13  Wakaba  <wakaba@suika.fam.cx>
 
 	* URIReference.pm (Message::IF::URIReference): 
