@@ -1,3 +1,10 @@
+2007-07-16  Wakaba  <wakaba@suika.fam.cx>
+
+	* DOMElement.pm: Incorrect module was referenced.
+
+	* DOMImplementation.pm: References to
+	the |Message::Charset::Encode| module has been removed.
+
 2007-07-15  Wakaba  <wakaba@suika.fam.cx>
 
 	* XMLParserTemp.pm: Use |Whatpm::Charset::DecodeHandle|
